--- a/elements/main-view.html
+++ b/elements/main-view.html
@@ -270,7 +270,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           </div>
 
           <div hidden="{{!_selectRoute(page, 'bill')}}">
-              <bills-view id="billView" class="flex" route="{{route}}" customers="{{customers}}" products="{{products}}" total="{{total}}" shared="{{shared}}"></bills-view>
+              <bills-view id="billView" class="flex" route="{{route}}" customers="[[customers]]" products="[[products]]" total="{{total}}" shared="[[shared]]"></bills-view>
           </div>          
 
         </div>
