--- a/elements/person/persons-view.html
+++ b/elements/person/persons-view.html
@@ -38,7 +38,7 @@ Example:
     </style>
 
    <paper-item hidden="{{customers.length}}" on-click="add">
-      <iron-icon icon="warning"></iron-icon>    
+      <iron-icon icon="warning" style="margin-right:10px;"></iron-icon>    
       <paper-item-body two-line>
         <div>Add a customer</div>
         <div secondary></div>
