--- a/index.html
+++ b/index.html
@@ -63,14 +63,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 </head>
 
 <body unresolved class="fullbleed layout vertical">
+
   <span id="browser-sync-binding"></span>
+
   <template is="dom-bind" id="app">
-
-<!--
-    <todo-data location="https://todonote.firebaseio.com" user="{{user}}" todos="{{todos}}"></todo-data>
-
-    <todo-view class="flex" route="{{route}}" todos="{{todos}}"></todo-view>
--->
 
     <main-view></main-view>
 
@@ -79,8 +75,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     <platinum-sw-register auto-register clients-claim skip-waiting 
       on-service-worker-installed="displayInstalledToast">
-      <platinum-sw-cache default-cache-strategy="networkFirst"
-                         precache-file="precache.json">
+      <platinum-sw-cache default-cache-strategy="networkFirst" precache-file="precache.json">
       </platinum-sw-cache>
     </platinum-sw-register>
 
